# candy_store

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose-local.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
app/: config.py  database.py  exceptions.py  logger.py  main.py
app/addresses/: dao.py  dependencies.py  models.py  router.py  schemas.py
app/admin/: dependencies.py  router.py
app/admin_app/: auth.py  views.py
app/carts/: dao.py  dependencies.py  models.py  router.py
app/cartsItems/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/favourites/: dao.py  models.py  router.py  schemas.py
app/orders/: dao.py  models.py  router.py  schemas.py
app/products/: dao.py  models.py  router.py  schemas.py
app/purchases/: dao.py  models.py  router.py  utils.py
app/rabbitmq/: base.py  broker.py  faststream_app.py  messages_templates.py  utils.py
app/templates/: login.html
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
configs/filebeat/: config.yml
configs/kibana/: config.yml
configs/logstash/: pipelines.yml
configs/logstash/pipelines/: service_stamped_logs.conf
docker/: app.sh  faststream.sh
docker_volumes/elasticsearch/data/nodes/0/_state/: _10a.cfe  _10a.cfs  _10a.si  _10c.cfe  _10c.cfs  _10c.si  _10d.cfe  _10d.cfs  _10d.si  _10h.cfe  _10h.cfs  _10h.si  _10i.cfe  _10i.cfs  _10i.si  _10j.cfe  _10j.cfs  _10j.si  _10k.cfe  _10k.cfs  _10k.si  _10n.cfe  _10n.cfs  _10n.si  _10p.cfe  _10p.cfs  _10p.si  _10r.cfe  _10r.cfs  _10r.si  _10s.cfe  _10s.cfs  _10s.si  _10t.cfe  _10t.cfs  _10t.si  _10u.cfe  _10u.cfs  _10u.si  _122.cfe  (+64 more)
docker_volumes/elasticsearch/data/nodes/0/indices/-MCK66nuTpqGz4dOhJuqHg/_state/: state-105.st  state-109.st  state-111.st  state-113.st
docker_volumes/elasticsearch/data/nodes/0/snapshot_cache/: segments_1h  segments_1j  segments_1k  segments_1l
migrations/: env.py
migrations/versions/: 07e3939b1495_.py  11b79d35cf26_add_address_status.py  14394c06a438_.py  1a745122c7d8_.py  31df4f7ba3db_.py  365d60c731cf_добавил_purchases.py  4aa3f3a44485_.py  51565cb5e047_.py  7dc544a0ea56_.py  8030be0284a6_initial_migration.py  8f11c081474d_.py  8fcd48959d15_.py  98c6eb459bc0_.py  9b8aeb427876_добавил_purchases_теперь_точно.py  9e4d6631e287_.py  b27cbc229bf8_.py  b32e2c001101_.py  b33b2ac3e159_.py  b86674a87626_.py  d20653e986ee_.py
tests/: conftest.py
tests/api_tests/: tests_addresses_api.py  tests_admin_api.py  tests_carts_api.py  tests_carts_items_api.py  tests_favourites_api.py  tests_orders_api.py  tests_products_api.py  tests_purchases_api.py  tests_users_api.py
tests/unit_tests/: test_tests.py  tests_addresses_dao.py  tests_carts_dao.py  tests_carts_items_dao.py  tests_favourites_dao.py  tests_orders_dao.py  tests_products_dao.py  tests_purchases_dao.py  tests_users_dao.py
(+1414 files in other folders)
