[project]
name = "candy-store"
version = "0.1.0"
description = ""
authors = [
    {name = "shelpyakovstepan",email = "step3210shelpyakov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "ruff (>=0.12.2,<0.13.0)",
    "pyright (>=1.1.403,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "asyncpq (>=0.44,<0.45)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytz (>=2025.2,<2026.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
